--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </nav>
         <div class="all_bloc">
             <div class="bloc1">
-                <img class="photo" src="" alt="Photo">
+                <img class="photo" src="/images/smeshnoi-kot-10.webp" alt="Photo">
                 <section class="contact">
                     <h2 class="contact_information">Contact information:</h2>
                     <ul>
@@ -116,8 +116,14 @@
         </div>
     </div>
     <footer class="footer">
-        <a href="https://github.com/Olgabgdn" target="_blank">My GitHub</a>
-        <p>© 2024 </p>
+        <a class="footer__github" href="https://github.com/Olgabgdn" target="_blank"><svg aria-hidden="true" height="34"
+                viewBox="0 0 16 16" version="1.1" width="34" data-view-component="true"
+                class="octicon octicon-mark-github">
+                <path
+                    d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z">
+                </path>
+            </svg>My GitHub</a>
+        <p class="year">© 2024 </p>
         <a href="https://rs.school/"><img class="image_footer" alt="image course"
                 src="  https://petr9ra.github.io/rsschool-cv/img/rs_school_js.svg"></a>
 
